--- a/.travis.yml
+++ b/.travis.yml
@@ -5,3 +5,10 @@ go:
   - "1.8"
   - "1.10.x"
   - master
+install:
+  - go get ./...
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
+script:
+  - go test -v -covermode=count -coverprofile=coverage.out
+  - $(go env GOPATH | awk 'BEGIN{FS=":"} {print $1}')/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
