--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 name: Test
 
-on: [push]
+on: [push, pull_request]
 
 jobs:
   build:
@@ -8,30 +8,32 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
         matrix:
-          go-version: [ '1.14', '1.16', '1.18', '1.20.x' ]
+          go-version: [1.20.x, 1.21.x, 1.22.x]
     
     steps:
         - name: Checkout
-          uses: actions/checkout@v3
+          uses: actions/checkout@v4
 
         - name: Setup Go ${{ matrix.go-version }}
-          uses: actions/setup-go@v4
+          uses: actions/setup-go@v5
           with:
             go-version: ${{ matrix.go-version }}
+            stable: true
 
         - name: Install dependencies
           run: |
             go mod download
+  
         - name: Run Unit tests
           run: |
             go test -race -covermode atomic -coverprofile=covprofile ./...
         
         - name: Install goveralls
-          if : ${{ matrix.go-version == '1.20.x' }}
+          if : ${{ matrix.go-version == '1.22.x' }}
           run: go install github.com/mattn/goveralls@latest
         
         - name: Send coverage
-          if : ${{ matrix.go-version == '1.20.x' }}
+          if : ${{ matrix.go-version == '1.22.x' }}
           env:
               COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           run: goveralls -coverprofile=covprofile -service=github
