--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
         matrix:
-          go-version: [ '1.14', '1.16', '1.18', '1.20.x' ]
+          go-version: [ '1.20.x', '1.22.x', '1.23.x', '1.24.x' ]
     
     steps:
         - name: Checkout
@@ -24,14 +24,15 @@ jobs:
             go mod download
         - name: Run Unit tests
           run: |
+            cd v2
             go test -race -covermode atomic -coverprofile=covprofile ./...
         
         - name: Install goveralls
-          if : ${{ matrix.go-version == '1.20.x' }}
+          if : ${{ matrix.go-version == '1.24.x' }}
           run: go install github.com/mattn/goveralls@latest
         
         - name: Send coverage
-          if : ${{ matrix.go-version == '1.20.x' }}
+          if : ${{ matrix.go-version == '1.24.x' }}
           env:
               COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           run: goveralls -coverprofile=covprofile -service=github
